# laprdus

./: .gitignore  CLAUDE.md  PRD.md  SConstruct  progress.txt  readme.md
.claude/: settings.json
.claude/skills/android-code-review/: SKILL.md
.claude/skills/android-fix-accessibility/: SKILL.md
.claude/skills/build-android/: SKILL.md
.claude/skills/build-arch/: SKILL.md
.claude/skills/build-deb/: SKILL.md
.claude/skills/build-nvda/: SKILL.md
.claude/skills/build-rpm/: SKILL.md
.claude/skills/build-sapi/: SKILL.md
.claude/skills/build-tarball/: SKILL.md
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
data/dictionary/: emoji.json  internal.json  spelling.json
docs/: dev.md  laprdus.md
include/laprdus/: laprdus.hpp  laprdus_api.h  types.hpp
installers/linux/arch/: PKGBUILD  laprdus-speechd.install  laprdus.install
installers/linux/deb/debian/: changelog  control  copyright  laprdus-speechd.postinst  laprdus-speechd.postrm  laprdus.postinst  laprdus.postrm  rules
installers/linux/rpm/: laprdus.spec
installers/linux/scripts/: speechd-configure.sh
installers/linux/tarball/: build-tarball.sh
installers/windows/: Croatian.isl  Serbian.isl  laprdus_sapi5.iss
nvda-addon/: buildVars.py  pyproject.toml  readme.md  sconstruct
nvda-addon/addon/: installTasks.py
nvda-addon/addon/globalPlugins/laprdus/: __init__.py
nvda-addon/addon/synthDrivers/: __init__.py
scripts/: build-all.cmd  build-all.sh
src/: laprdus.cpp
src/audio/: audio_synthesizer.cpp  audio_synthesizer.hpp  formant_pitch.cpp  formant_pitch.hpp  phoneme_data.cpp  phoneme_data.hpp  signalsmith-stretch.h  sonic_processor.cpp  sonic_processor.hpp
src/audio/signalsmith-linear/: fft.h  stft.h
src/audio/sonic/: sonic.c  sonic.h
src/c_api/: laprdus_api.cpp
src/core/: croatian_numbers.cpp  croatian_numbers.hpp  emoji_dict.cpp  emoji_dict.hpp  inflection.cpp  inflection.hpp  phoneme_mapper.cpp  phoneme_mapper.hpp  pronunciation_dict.cpp  pronunciation_dict.hpp  spelling_dict.cpp  spelling_dict.hpp  tts_engine.cpp  tts_engine.hpp  user_config.cpp  user_config.hpp  voice_registry.cpp  voice_registry.hpp
src/platform/android/: jni_bridge.cpp
tests/: test_features.cpp
tests/linux/: test_cli.cpp  test_package_install.sh  test_speechd_module.cpp
tests/linux/catch2/: catch.hpp
tests/windows/: run_tests.cmd  run_tests_build.cmd  run_tests_installed.cmd  test_cli.cpp  test_user_dictionary.cpp
tools/phoneme_packer/: packer.cpp
(+67 files in other folders)
